<resources>
    <string name="app_name">GiveawayApp</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="content_description"> </string>
    <string name="et_hint_email_id">Username/Email</string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_username_used">The username is already in use by another account.</string>
    <string name="err_msg_enter_username">Please enter username.</string>
    <string name="err_msg_username_length">Username should min length of 6.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_username_or_email">Please enter username or email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_enter_mobile_number">Please enter mobil number</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password mismatch.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_title_description">Enter your username or e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">Email send successfully to rest your password! \</string>

    <string name="password_strength_caption">Password Strength: {0}</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="register_success">You are registered successfully. Please check your email for verification</string>
    <string name="pleas_verify_email">Pleas verify your email address</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile_number">Mobile Number</string>

    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="msg_profile_update_success">Your profile is updated successfully</string>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_item">Item</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notifications</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="user_profile">Profile User</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="action_add_item">Add Item</string>

    <string name="title_add_item">ADD ITEM</string>
    <string name="et_hint_item_title">Item Title</string>
    <string name="et_hint_item_price">Item Price ($)</string>
    <string name="et_hint_item_description">Item Description</string>
    <string name="et_hint_item_quantity">Item Quantity</string>

    <string name="err_msg_select_item_image">Please select one item image at les </string>
    <string name="err_msg_enter_item_title">Please enter item title.</string>
    <string name="err_msg_enter_item_price">Please enter item price.</string>
    <string name="err_msg_enter_item_description">Please enter item description.</string>
    <string name="err_msg_enter_item_quantity">Please enter item quantity.</string>

    <string name="permission_result_pending">Waiting for result…</string>
    <string name="permission_result_granted">Permission granted!</string>
    <string name="permission_result_denied">Permission denied :(</string>
    <string name="msg_item_upload_success">Your product was uploaded successfully</string>

    <string name="no_items_added_yet">No items added yet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_dashboard_item_found">No items found!</string>

    <string name="msg_item_delete_success">Your item is deleted successfully</string>
    <string name="delete_dialog_title">Delete Item</string>
    <string name="msg_delete_dialog">Are you sure you want to delete the item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="pwd_weak">WEAK</string>
    <string name="pwd_medium">MEDIUM</string>
    <string name="pwd_strong">STRONG</string>
    <string name="pwd_very_strong">VERY STRONG</string>
    <string name="pwd_minimum_characters">Minimum 8 characters</string>
    <string name="pwd_maximum_characters">Maximum 72 characters</string>
    <string name="pwd_uppercase_character">At least one uppercase character</string>
    <string name="pwd_lowercase_characters">At least one lowercase characters</string>
    <string name="pwd_digit">At least one number</string>
    <string name="pwd_special_character">At least one special Character</string>

    <string name="title_item_details">ITEM DETAILS</string>
    <string name="lbl_item_description">Item Description</string>
    <string name="lbl_item_details_stock_quantity">Stock Quantity</string>

    <string name="display_price">$%1$s</string>
    <string name="display_address">%1$s, %2$s</string>

    <string name="btn_lbl_add_to_chart">ADD TO CART</string>
    <string name="msg_success_item_add_to_cart">Item was added to your cart.</string>

    <string name="btn_lbl_go_to_cart">GO TO CART</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="login_screen">LOGIN SCREEN</string>
    <string name="til_email_id">Username/Email Id</string>
    <string name="til_login_password">Password</string>
    <string name="tv_forgot_password">Forgot Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_don_t_have_an_account">Don\'t have an account?</string>
    <string name="tv_register">Register</string>
    <string name="todo">TODO</string>

    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully</string>
    <string name="msg_for_available_stock"><![CDATA[Available stock is %1$s!. You can not add more than stock quantity.]]></string>

    <string name="title_address_title">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbl_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>

    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip code</string>
    <string name="err_msg_please_enter_other_details">Please enter other details</string>
    <string name="msg_your_address_added_successfully">Your address was added successfully</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">Update</string>
    <string name="msg_your_address_update_successfully">Your address was updated successfully</string>

    <string name="msg_your_address_deleted_successfully">Your address was deleted successfully</string>
    <string name="msg_delete_address_dialog">Are you sure you want to delete the Address?</string>
    <string name="delete_address_dialog_title">Delete Address</string>

    <string name="msg_delete_itemCart_dialog">Are you sure you want to delete the Item from your Cart?</string>
    <string name="title_select_address">SELECT ADDRESS</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="hint_write_text_message">write message here...</string>
    <string name="user_name_profile">user name</string>
    <string name="err_msg_enter_message">Please enter Message</string>

    <string name="type_message">Type Message</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="no_chat_found">No Chat found</string>

</resources>